--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -78,10 +78,11 @@
     background-color: #f5f5f5;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /* margin-top: 30px; */
+    margin-top: 30px;
     width: 250px;
     text-align: center;
     /* margin-left: 800px; */
+    height:50vh;
 }
 
 .donut-chart-container h4 {
@@ -206,6 +207,7 @@
 .calendar-container {
     flex: 1;
     max-width: 400px; /* Adjust as necessary */
+    margin-top:30px;
 }
 
 .event-reminders {
@@ -386,6 +388,16 @@
     position: absolute;  /* Position absolue pour s'assurer que le loader soit au-dessus de tout autre contenu */
     top: 0;
     left: 0;
+}
+
+.delete-all-events-button{
+    background-color: red;
+    color:white;
+    border-radius: 5px;
+    padding: 8px;
+    border:none;
+    cursor:pointer;
+    margin-bottom: 10px;
 }
 
 @media (max-width: 768px) {
