ajouter l'affichage du navbar-right dans les mobiles

--- a/src/components/Admin/AdminProfile.css
+++ b/src/components/Admin/AdminProfile.css
@@ -277,8 +277,8 @@
     }
     .edit-icon-admin-logo{
         margin-top: 170px;
-        margin-left: 5px;
         color: #4e7dad;
+        margin-left:-680px !important;
     }
     .change-password-title{
         color:black;
