--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -62,6 +62,7 @@
     transition: background-color 0.3s ease;
     display: flex;
     align-items: center;
+    margin-top:8px;
 }
 
 .logout-button:hover {
@@ -267,5 +268,32 @@
 
     .notification-container {
         position: relative; /* Maintenir la position pour les notifications */
+    }
+
+    .notification-item {
+        padding: 10px;
+        border-bottom: 1px solid #eee;
+        cursor: pointer;
+        margin-left : 0px;
+    }
+    
+    .notification-item:hover {
+        background-color: #f5f5f5;
+    }
+    
+    .notification-item:last-child {
+        border-bottom: none;
+    }
+    .notification-dropdown {
+        position: absolute;
+        width: 200px;
+        max-height: 400px;
+        overflow-y: auto;
+        background: white;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        z-index: 1000;
+        margin-left:100px;
     }
 }
