--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -538,7 +538,7 @@
         flex-direction: column; /* Réorganise les éléments en colonne */
         gap: 5px; /* Réduit l'espacement */
         position:fixed;
-        margin-top:520px;
+        top:650px;
         margin-left:20px;
     }
 
