--- a/src/components/Admin/Adminsignup/AdminSignup.css
+++ b/src/components/Admin/Adminsignup/AdminSignup.css
@@ -57,6 +57,7 @@ label {
     border: 1px solid #ccc; /* Bordure grise */
     border-radius: 4px; /* Coins arrondis */
     transition: border-color 0.3s; /* Transition douce pour le changement de couleur */
+    margin-bottom:6px;
 }
 
 .admin-signup-input:focus {
@@ -70,6 +71,7 @@ label {
     border: 1px solid #ccc; /* Bordure grise */
     border-radius: 4px; /* Coins arrondis */
     transition: border-color 0.3s; /* Transition douce pour le changement de couleur */
+    margin-bottom: 10px;
 }
 
 
@@ -135,6 +137,14 @@ label {
         margin-top: 100px !important; 
         margin-bottom: 50px; /* Ajuste la marge inférieure */
         height: auto; /* Permet d'ajuster la hauteur automatiquement */
+    }
+    .admin-signup-input {
+        width: 100%; /* Largeur complète */
+        padding: 10px; /* Espacement intérieur */
+        border: 1px solid #ccc; /* Bordure grise */
+        border-radius: 4px; /* Coins arrondis */
+        transition: border-color 0.3s; /* Transition douce pour le changement de couleur */
+        margin-bottom:20px;
     }
 
 }
