--- a/src/components/Bulletin/BulletinHeader.css
+++ b/src/components/Bulletin/BulletinHeader.css
@@ -77,7 +77,7 @@
 }
 
 .bulletin-th {
-    background-color: #4e7dad;
+    background-color: #252628;
     color: white;
     font-weight: bold;
     border: 1px solid rgb(215, 215, 215); /* Ensure header cells have a border */
