ajouter le champ de remarques pour les étudiants

--- a/src/components/Forgotpassword/ForgotPassword.css
+++ b/src/components/Forgotpassword/ForgotPassword.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #e9f1fa; /* Bleu clair */
+    background-color: white;
     font-family: 'Arial', sans-serif;
     padding: 10px; /* Ajoute un padding pour éviter que le contenu touche les bords sur mobile */
 }
