modifier le bg de la page de reset password

--- a/src/components/Resetpassword/ResetPasswordForm.css
+++ b/src/components/Resetpassword/ResetPasswordForm.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #e9f1fa; /* Bleu clair */
+    background-color: white;
     font-family: 'Arial', sans-serif;
 }
 
@@ -71,4 +71,14 @@ h2 {
     margin-top: 15px;
     color: #355a85;
     text-align: center;
+}
+
+.formulaire-reinitialisation-container {
+    align-items: center;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    font-family: Arial, sans-serif;
+    height: 100vh;
+    justify-content: center;
 }
