--- a/src/components/Student/Student.css
+++ b/src/components/Student/Student.css
@@ -438,8 +438,15 @@ tr:hover {
 .student-profile-picture {
     margin-left: 100px;
     flex-shrink: 0;
-    margin-top: -820px;
+    margin-top: 100px;
+    display: inline-block; /* S'assure qu'il reste dans son conteneur */
+
 }
+
+.student-profile-test{
+    display:flex;
+}
+
 
 .pagination-controls-student {
     display: flex;
