--- a/src/components/Transactions/Transactions.css
+++ b/src/components/Transactions/Transactions.css
@@ -259,3 +259,32 @@
     cursor: pointer;
     font-size: 16px;  
 }
+
+@media(max-width:768px){
+    .modal-content {
+        background-color: #ffffff;
+        padding: 20px;
+        border-radius: 8px;
+        max-width: 250px;
+        width: 100%;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    .modal-content h3{
+        font-size: 13px;
+    }
+
+    .modal-content button {
+        padding: 8px;
+        margin-top: 10px;
+        background-color: #4e7dad;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        font-weight: bold;
+        cursor: pointer;
+        transition: background-color 0.3s;   
+        max-width: 100px;
+        margin-left: 70px;
+        gap:10px;
+    }
+}
