--- a/src/components/Transactions/Transactions.css
+++ b/src/components/Transactions/Transactions.css
@@ -287,4 +287,16 @@
         margin-left: 70px;
         gap:10px;
     }
+
+    .transaction-print-button{
+        margin-top: 70px;
+        margin-left:580px; 
+        padding: 10px 20px;
+        background-color: #ffcc00;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;  
+    }
 }
