fixing some bugs

--- a/src/components/HomeworkBook/HomeworkBook.css
+++ b/src/components/HomeworkBook/HomeworkBook.css
@@ -214,3 +214,16 @@ h2 {
 .homework-item p strong {
     color: #333;
 }
+
+@media (max-width: 768px) {
+    .form-container {
+        margin-top:50px;
+        max-width: 500px;
+        margin-left: 0px;
+        padding: 20px;
+        background-color: #f9f9f9;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+}
