--- a/src/components/Admin/AdminProfile.css
+++ b/src/components/Admin/AdminProfile.css
@@ -1,15 +1,3 @@
-/* .admin-profile-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    margin: auto;
-} */
-
 .admin-password-update{
     margin-top:80px;
     margin-left:-300px;
@@ -261,13 +249,13 @@
 @media (max-width:768px){
     .edit-icon-admin{
         top: 280px;
-        left: 270px;
+        left: 330px;
         color: #4e7dad;
     }
     .modify-profile-picture-admin{
         position: absolute;
         top: 320px;
-        left: 110px;
+        left: 170px;
         background-color: #5c7fa1;
         color: white;
         border: none;
@@ -331,6 +319,13 @@
         transition: background-color 0.3s;
         flex-shrink: 0; /* Empêche le bouton de se réduire */
         margin-right:-100px;
+    }
+    .admin-name{
+        color: #4e7dad;
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-top:0px;
+        margin-left:0px;
     }
     
 }
