--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,7 +7,20 @@
     position: relative;
     bottom: 0;
     width: 100%; /* Assure que le footer prend toute la largeur */
+    margin-top: -220px;
 }
+
+.signup-footer-container {
+    background-color: #4e7dad; /* Couleur de fond du footer */
+    color: white; /* Couleur du texte */
+    padding: 5px;
+    text-align: center; /* Centre le texte */
+    position: relative;
+    bottom: 0;
+    width: 100%; /* Assure que le footer prend toute la largeur */
+    margin-top: 450px;
+}
+
 
 .footer-content {
     display: flex;
@@ -32,4 +45,28 @@
 .footer-bottom {
     margin-top: 0px; /* Espacement au-dessus du texte copyright */
     margin-bottom: 0px;
+}
+
+@media (max-width: 768px) {
+    .footer-container {
+        background-color: #4e7dad; /* Couleur de fond du footer */
+        color: white; /* Couleur du texte */
+        padding: 5px;
+        text-align: center; /* Centre le texte */
+        position: relative;
+        bottom: 0;
+        width: 100%; /* Assure que le footer prend toute la largeur */
+        margin-top: 190px;
+    }
+
+    .signup-footer-container {
+        background-color: #4e7dad; /* Couleur de fond du footer */
+        color: white; /* Couleur du texte */
+        padding: 5px;
+        text-align: center; /* Centre le texte */
+        position: relative;
+        bottom: 0;
+        width: 100%; /* Assure que le footer prend toute la largeur */
+        margin-top: 100px;
+    }
 }
