--- a/src/components/Educationlevel/EducationLevel.css
+++ b/src/components/Educationlevel/EducationLevel.css
@@ -121,7 +121,7 @@
     z-index: 1000;
 }
 
-.modal-content {
+.modal-content-education-level {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
@@ -229,6 +229,56 @@
     text-align: right;
     margin-bottom: 100px;
 }
+
+.modal-content-education-level {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 500px;
+    width: 100%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.modal-content-education-level h2 {
+    color: #4e7dad;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.modal-content-education-level form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.modal-content-education-level button {
+    padding: 10px;
+    width:200px;
+    margin-top: -20px;
+    background-color: #4e7dad;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-left: 150px;
+}
+
+.modal-content-education-level button:hover {
+    background-color: #ffcc00;
+    color: #4e7dad;
+}
+
+.modal-content-education-level button[type="button"] {
+    background-color: #ccc;
+    color: #333;
+}
+
+.modal-content-education-level button[type="button"]:hover {
+    background-color: #bbb;
+}
+
 @media (max-width: 768px) {
     .education-level-button {
         margin-left:100px;
