--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -463,3 +463,41 @@
         margin-right: -500px !important;
     }
 }
+
+.payment-summary {
+    display: flex;
+    /* justify-content: space-around; */
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left:-280px;
+}
+
+.payment-section {
+    padding: 10px;
+    text-align: left;
+    width: 250px;
+    font-size: 1.1em;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    gap: 10px; /* Espacement entre P et N.P */
+}
+
+
+
+.payment-section span {
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+.paid-indicator {
+    background-color: #4e7dad; /* Vert */
+    color: white;
+}
+
+.unpaid-indicator {
+    background-color: #ffcc00; /* Rouge */
+    color: white;
+}
+
